feat: add a maxFiles property to limit files